<resources>
    <string name="app_name" translatable="false">ProtWall</string>
    <string name="app_description">ProtWall provides simple and advanced ways to block access to the internet - no root required. Applications and addresses can individually be allowed or denied access to your Wi-Fi and/or mobile connection.</string>
    <string name="app_copyright" translatable="false">Copyright \u00A9 2016 by ProTool Apps</string>
    <string name="app_android">ProtWall requires Android 4.0 or later</string>
    <string name="app_license">By using ProtWall, you agree to the <a href="http://www.gnu.org/licenses/gpl.txt">GNU General Public License version 3</a></string>
    <string name="app_first">Great care has been taken to develop and test ProtWall,
however it is impossible to guarantee ProtWall will work correctly on every device.
\n\nBy using ProtWall, you agree to the <a href="http://www.gnu.org/licenses/gpl.txt">GNU General Public License version 3</a></string>
    <string name="app_admob">ProtWall uses Google\'s AdMob advertising service. AdMob\'s privacy policy is available <a href="https://www.google.com/intl/en/policies/privacy/">here</a>.</string>
    <string name="app_agree">I agree</string>
    <string name="app_disagree">I disagree</string>
    <string name="menu_search">Search for application</string>
    <string name="menu_filter">Filter applications</string>
    <string name="menu_app_user">Show user applications</string>
    <string name="menu_app_system">Show system applications</string>
    <string name="menu_app_nointernet">Show applications without internet</string>
    <string name="menu_app_disabled">Show disabled applications</string>
    <string name="menu_sort">Sort applications</string>
    <string name="menu_sort_name">Sort on name</string>
    <string name="menu_sort_uid">Sort on uid</string>
    <string name="menu_sort_data">Sort on data usage</string>
    <string name="menu_log">Show log</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_legend">Legend</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="menu_protocol_udp" translatable="false">UDP</string>
    <string name="menu_protocol_tcp" translatable="false">TCP</string>
    <string name="menu_protocol_other">Other</string>
    <string name="menu_traffic_allowed">Allowed</string>
    <string name="menu_traffic_blocked">Blocked</string>
    <string name="menu_live">Live updates</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_resolve">Show names</string>
    <string name="menu_organization">Show organization</string>
    <string name="menu_pcap_enabled">PCAP enabled</string>
    <string name="menu_pcap_export">PCAP export</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="title_protocol">Protocol</string>
    <string name="title_dport">Source port</string>
    <string name="title_raddr">Destination address</string>
    <string name="title_rport">Destination port</string>
    <string name="title_ruid">Destination application</string>
    <string name="title_external">For an external server select \'nobody\'</string>
    <string name="setting_defaults">Defaults</string>
    <string name="setting_whitelist_wifi">Block Wi-Fi</string>
    <string name="setting_whitelist_other">Block mobile</string>
    <string name="setting_screen_wifi">Allow Wi-Fi when screen on</string>
    <string name="setting_screen_other">Allow mobile when screen on</string>
    <string name="setting_whitelist_roaming">Block roaming</string>
    <string name="setting_options">Options</string>
    <string name="setting_theme">Theme: %1$s</string>
    <string name="setting_dark">Use dark theme</string>
    <string name="setting_install">Notify on new install</string>
    <string name="setting_auto">Auto enable after %1$s minutes</string>
    <string name="setting_delay">Delay screen off %1$s minutes</string>
    <string name="setting_update">Check for updates</string>
    <string name="setting_network_options">Network options</string>
    <string name="setting_subnet">Subnet routing</string>
    <string name="setting_tethering">Allow tethering</string>
    <string name="setting_lan">Allow LAN access</string>
    <string name="setting_ip6">Enable IPv6 traffic</string>
    <string name="setting_wifi_home">Wi-Fi home networks: %1$s</string>
    <string name="setting_metered">Handle metered Wi-Fi networks</string>
    <string name="setting_metered_2g">Consider 2G unmetered</string>
    <string name="setting_metered_3g">Consider 3G unmetered</string>
    <string name="setting_metered_4g">Consider LTE unmetered</string>
    <string name="setting_national_roaming">Ignore national roaming</string>
    <string name="setting_advanced_options">Advanced options</string>
    <string name="setting_system">Manage system applications</string>
    <string name="setting_log_app">Log internet access</string>
    <string name="setting_access">Notify on internet access</string>
    <string name="setting_filter">Filter traffic</string>
    <string name="setting_track_usage">Track network usage</string>
    <string name="setting_reset_usage">Reset network usage</string>
    <string name="setting_show_resolved" translatable="false">Show resolved domain names</string>
    <string name="setting_block_domains">Block domain names</string>
    <string name="setting_forwarding">Port forwarding</string>
    <string name="setting_vpn4">VPN IPv4: %s</string>
    <string name="setting_vpn6">VPN IPv6: %s</string>
    <string name="setting_dns">VPN DNS: %s</string>
    <string name="setting_socks5_enabled">Use SOCKS5 proxy</string>
    <string name="setting_socks5_addr">SOCKS5 address: %s</string>
    <string name="setting_socks5_port">SOCKS5 port: %s</string>
    <string name="setting_socks5_username">SOCKS5 username: %s</string>
    <string name="setting_socks5_password">SOCKS5 password: %s</string>
    <string name="setting_pcap_record_size">PCAP record size: %s B</string>
    <string name="setting_pcap_file_size">PCAP max. file size: %s MB</string>
    <string name="setting_watchdog">Watchdog: every %s minutes</string>
    <string name="setting_stats_category">Speed notification</string>
    <string name="setting_stats">Show speed notification</string>
    <string name="setting_stats_top">Show top applications</string>
    <string name="setting_stats_frequency">Sample interval: %s ms</string>
    <string name="setting_stats_samples">Number of samples: %s s</string>
    <string name="setting_backup">Backup</string>
    <string name="setting_export">Export settings</string>
    <string name="setting_import">Import settings</string>
    <string name="setting_hosts">Import hosts file</string>
    <string name="setting_hosts_url">Hosts file download URL</string>
    <string name="setting_hosts_download">Download hosts file</string>
    <string name="setting_technical">Technical information</string>
    <string name="setting_technical_general">General</string>
    <string name="setting_technical_networks">Networks</string>
    <string name="setting_technical_subscription">Subscriptions</string>
    <string name="summary_install">Show status bar notification to directly configure newly installed applications (pro feature)</string>
    <string name="summary_auto">After disabling using the widget, automatically enable ProtWall again after the selected number of minutes (enter zero to disable this option)</string>
    <string name="summary_delay">After turning the screen off, keep screen on rules active for the selected number of minutes (enter zero to disable this option)</string>
    <string name="summary_update">Check for new releases on GitHub twice daily</string>
    <string name="summary_tethering">Depending on the Android version, tethering may work or may not work. Tethered traffic cannot be filtered.</string>
    <string name="summary_subnet">Enable subnet routing; might enable Wi-Fi calling, but might also trigger bugs in Android and increase battery usage</string>
    <string name="summary_lan">Allow applications to connect to local area network addresses, like 10.0.0.0/8, 172.16.0.0/12 and 192.168.0.0/16</string>
    <string name="summary_ip6">Route IP version 6 traffic to ProtWall so it can selectively be allowed or blocked</string>
    <string name="summary_wifi_home">Apply Wi-Fi network rules for selected network only (apply mobile network rules for other Wi-Fi networks)</string>
    <string name="summary_metered">Apply mobile network rules to metered (paid, tethered) Wi-Fi networks</string>
    <string name="summary_metered_2g">Apply Wi-Fi network rules for 2G data connections</string>
    <string name="summary_metered_3g">Apply Wi-Fi network rules for 3G data connections</string>
    <string name="summary_metered_4g">Apply Wi-Fi network rules for LTE data connections</string>
    <string name="summary_national_roaming">Do not apply roaming rules when the SIM and mobile network country are the same</string>
    <string name="summary_system">Define rules for system applications (for experts)</string>
    <string name="summary_log_app">Log attempts to access the internet for applications. This might result in extra battery usage.</string>
    <string name="summary_access">Show a status bar notification when an application attempts to access a new internet address (when filtering is disabled, only blocked internet access attempts will be notified)</string>
    <string name="summary_filter">Filter IP packets going out of the VPN tunnel. This might result in extra battery usage.</string>
    <string name="summary_track_usage">Track the number of bytes sent and received for each application and address. This might result in extra battery usage.</string>
    <string name="summary_block_domains">Respond with \'name error\' (NXDOMAIN) for blocked domain names. This switch is disabled when no hosts file is available.</string>
    <string name="summary_socks5_enabled">Only TCP traffic will be sent to the proxy server</string>
    <string name="summary_watchdog">Periodically check if ProtWall is still running (enter zero to disable this option). This might result in extra battery usage.</string>
    <string name="summary_stats">Show network speed graph in status bar notification</string>
    <string-array name="default_wifi_home" />
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_started">Enforcing rules</string>
    <string name="msg_packages">%1$d allowed, %2$d blocked</string>
    <string name="msg_hosts">%1$d allowed, %2$d blocked, %3$d hosts</string>
    <string name="msg_waiting">Waiting for event</string>
    <string name="title_dontask">Don\'t ask again</string>
    <string name="app_publisher" translatable="false">Protool Apps</string>
    <string name="firewall_splash_description" translatable="false">Protect your phone and control your apps access to the internet</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="firewall_status" translatable="false">Firewall is</string>
    <string name="click_status" translatable="false">Click to change status</string>
    <string name="access_control" translatable="false">Access control</string>
    <string name="access_logs" translatable="false">Access logs</string>
    <string name="congrats" translatable="false">Congratulations</string>
    <string name="firewall_active" translatable="false">Your firewall is now active!</string>
    <string name="security_increased" translatable="false">Your security level has been increased and you can now control your apps access to the internet!</string>
    <string name="proceed_access_control" translatable="false">Proceed to apps control...</string>
</resources>