<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_normal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_splashtop"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical" >
    </LinearLayout>

    <ImageView
        android:id="@+id/imageview_splashcenter"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:src="@mipmap/ic_launcher" />


    <LinearLayout
        android:id="@+id/ll_splashbottom"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_app_title_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />
        <TextView
            android:id="@+id/tv_app_title_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_publisher"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_splashdescriptionbottom"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_splash_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/firewall_splash_description"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_splash_loading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/loading"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>