<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tib="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_normal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_maintop"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_firewall_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/firewall_status"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_check_device"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="2dp">


        <net.colindodd.toggleimagebutton.ToggleImageButton
            android:id="@+id/tib_fwEnable"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tib:tib_drawable_off="@drawable/ic_off_img"
            tib:tib_drawable_on="@drawable/ic_on_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_status"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />




    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="2dp" >

        <info.hoang8f.widget.FButton
            android:id="@+id/btnAccesscontrol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/access_control"
            android:layout_gravity="center_horizontal"
            fbutton:buttonColor="@color/fbutton_color_turquoise"
            fbutton:shadowColor="@color/fbutton_color_green_sea"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="4dp"
            fbutton:cornerRadius="5dp"
            />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnAccessLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/access_logs"
            android:layout_gravity="center_horizontal"
            fbutton:buttonColor="@color/fbutton_color_turquoise"
            fbutton:shadowColor="@color/fbutton_color_green_sea"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="4dp"
            fbutton:cornerRadius="5dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:gravity="center"
        android:orientation="horizontal" >



        <!--        <com.google.android.gms.ads.AdView
                    android:id="@+id/main_adView"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_gravity="bottom"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="@string/admob_banner_id" />-->

        <com.google.android.gms.ads.NativeExpressAdView
            android:id="@+id/main_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            ads:adSize="360x80"
            ads:adUnitId="@string/admob_native_id">
        </com.google.android.gms.ads.NativeExpressAdView>


    </LinearLayout>




</LinearLayout>

